<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="androidhive.info.tcset.activity.ContactusFragment"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:gravity="top|center_horizontal"
        android:text="@string/contact_header"
        android:id="@+id/textContactHeader"
        android:textColor="@color/textColorSecondary"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:text="@string/contact1"
        android:layout_below="@+id/textContactHeader"
        android:id="@+id/textContact1"
        android:textColor="@color/textColorSecondary"
        android:layout_alignLeft="@+id/textContactHeader"
        android:layout_alignStart="@+id/textContactHeader"
        android:layout_alignRight="@+id/textContactHeader"
        android:layout_alignEnd="@+id/textContactHeader"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:text="@string/contact2"
        android:layout_below="@+id/textContact1"
        android:id="@+id/textContact2"
        android:textColor="@color/textColorSecondary"
        android:layout_alignLeft="@+id/textContactHeader"
        android:layout_alignStart="@+id/textContactHeader"
        android:layout_alignRight="@+id/textContactHeader"
        android:layout_alignEnd="@+id/textContactHeader"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:text="@string/contact3"
        android:layout_below="@+id/textContact2"
        android:id="@+id/textContact3"
        android:textColor="@color/textColorSecondary"
        android:layout_alignLeft="@+id/textContactHeader"
        android:layout_alignStart="@+id/textContactHeader"
        android:layout_alignRight="@+id/textContactHeader"
        android:layout_alignEnd="@+id/textContactHeader"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:text="@string/contact4"
        android:layout_below="@+id/textContact3"
        android:id="@+id/textContact4"
        android:textColor="@color/textColorSecondary"
        android:layout_alignLeft="@+id/textContactHeader"
        android:layout_alignStart="@+id/textContactHeader"
        android:layout_alignRight="@+id/textContactHeader"
        android:layout_alignEnd="@+id/textContactHeader"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:text="@string/contact5"
        android:layout_below="@+id/textContact4"
        android:id="@+id/textContact5"
        android:textColor="@color/textColorSecondary"
        android:layout_alignLeft="@+id/textContactHeader"
        android:layout_alignStart="@+id/textContactHeader"
        android:layout_alignRight="@+id/textContactHeader"
        android:layout_alignEnd="@+id/textContactHeader"
        android:gravity="center_horizontal" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:text="@string/contact6"
        android:layout_below="@+id/textContact5"
        android:id="@+id/textContact6"
        android:textColor="@color/textColorSecondary"
        android:layout_alignLeft="@+id/textContactHeader"
        android:layout_alignStart="@+id/textContactHeader"
        android:layout_alignRight="@+id/textContactHeader"
        android:layout_alignEnd="@+id/textContactHeader"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

</RelativeLayout>
